--- a/CatChat/app/src/main/res/layout/activity_help.xml
+++ b/CatChat/app/src/main/res/layout/activity_help.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.catchat.HelpActivity"
+    tools:context="com.example.CatChat.HelpActivity"
     >
     <include
         layout="@layout/toolbar_main"
