--- a/CatChat/app/src/main/res/layout/fragment_drafts.xml
+++ b/CatChat/app/src/main/res/layout/fragment_drafts.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.catchat.DraftsFragment"
+    tools:context="com.example.CatChat.DraftsFragment"
     >
     <TextView
         android:layout_width="match_parent"
